# cmake

./: CMakeLists.txt  Doxyfile.in  README.md  static_library.cmake  static_libraryConfig.cmake.in
doc/: graph.dot
include/: color.cmake  functions.cmake  graphviz.cmake  package.cmake
include/CMakeHelper/: cmh_boost.cmake  cmh_build_config.cmake  cmh_cpp_build.cmake  cmh_executable.cmake  cmh_finder.cmake  cmh_library.cmake  cmh_library_package.cmake  finder.cmake  functions.cmake  package.cmake
include/CMakeHelper/doc/: Doxyfile.in  doc.cmake
include/CMakeHelper/header_only/: Config.cmake.in  library.cmake  package.cmake
include/CMakeHelper/package_basic/: Config.cmake.in  package.cmake
include/CMakeHelper/package_cmh/: Config.cmake.in  package.cmake
include/CMakeHelper/shared/: library.cmake
include/CMakeHelper/static/: library.cmake  libraryConfig.cmake.in
include/doc/: doc.cmake
include/static/: library.cmake
src/: package.cmake  static_library.cmake
src/demo/static/: CMakeLists.txt
src/doc/: Doxyfile.in  doc.cmake
src/static/: library.cmake  static_library.cmake  static_libraryConfig.cmake.in
test/var_from_file/: CMakeLists.txt  vars_hide.txt
